fix about page on mobile

--- a/src/app/about/About.module.css
+++ b/src/app/about/About.module.css
@@ -4,6 +4,9 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .container > div {
@@ -74,13 +77,26 @@
     .container {
         display: flex;
         flex-direction: column;
+        width: 100%;
+        padding: 0;
+        overflow-x: hidden;
     }
 
     .container .imageContainer {
         margin-right: 0;
+        width: 100%;
+        max-width: 100%;
     }
 
     .container > div {
         align-items: flex-start;
+        width: 100%;
+        max-width: 100%;
+        padding: 0.5rem;
+    }
+    
+    .right .aboutContainer {
+        width: 100%;
+        max-width: 100%;
     }
 }
